--- a/caution/index.html
+++ b/caution/index.html
@@ -11,7 +11,7 @@
 	<!--css-->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
-    <link rel="stylesheet" href="../notice/notice.css">
+    <link rel="stylesheet" href="../script/notice/notice.css">
     <!--web情報-->
     <meta name="keywords" content="水戸一, 水戸一附属, 水戸一附属中, 一学年,">
     <meta name="description" content="水戸一附属中生向けの総合ウェブサイトです。附属中向けの掲示板や質問箱を運営しています。">
@@ -41,10 +41,12 @@
 
 <body>
     <main>
-        <h1>警告</h1>
-        <p>このサイトは水戸一高附属中生専用サイトです。</p>
-        <p>外部の方は利用できません。</p>
-        <p>もし附属中生なのにこの画面が表示された場合は、<a href="https://mail.google.com/mail/?view=cm&to=yamamoto.yuujirou@mito1-h.ibk.ed.jp&su=サイトに入れない" target="_blank" rel="noopener noreferrer">yamamoto.yuujirou@mito1-h.ibk.ed.jp</a>まで名前と一緒に連絡ください。</p>
+        <section>
+            <h2>警告</h2>
+            <p>このサイトは水戸一高附属中生専用サイトです。</p>
+            <p>外部の方は利用できません。</p>
+            <p>もし附属中生なのにこの画面が表示された場合は、<a href="https://mail.google.com/mail/?view=cm&to=yamamoto.yuujirou@mito1-h.ibk.ed.jp&su=サイトに入れない" target="_blank" rel="noopener noreferrer">yamamoto.yuujirou@mito1-h.ibk.ed.jp</a>まで名前と一緒に連絡ください。</p>
+        </section>
     </main>
     <script data-goatcounter="https://talus.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
