--- a/admin/user_manage/index.html
+++ b/admin/user_manage/index.html
@@ -11,7 +11,7 @@
     <!--css-->
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
-    <link rel="stylesheet" href="../../notice/notice.css">
+    <link rel="stylesheet" href="../../script/notice/notice.css">
     <style>
         .user-list {
             display: grid;
@@ -137,7 +137,7 @@
             });
         });
     </script>
-    <script type="module" src="../../notice/notice.js"></script>
+    <script type="module" src="../../script/notice/notice.js"></script>
     <script src="../../script/customAlert.js" type="module"></script>
     <script src="../../script/verification.js"></script>
     <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
