--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
     <!--css-->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
-    <link rel="stylesheet" href="./notice/notice.css">
+    <link rel="stylesheet" href="./script/notice/notice.css">
     <!--web情報-->
     <meta name="keywords" content="水戸一, 水戸一附属, 水戸一附属中, 一学年,">
     <meta name="description" content="水戸一附属中生向けの総合ウェブサイトです。附属中向けの掲示板や質問箱を運営しています。">
@@ -123,7 +123,7 @@
         <a href="./">トップページに戻る</a>
     </main>
 
-    <script type="module" src="./notice/notice.js" defer></script>
+    <script type="module" src="./script/notice/notice.js" defer></script>
     <script src="./script/customAlert.js" type="module"></script>
     <script src="./script/verification.js"></script>
 </body>
