--- a/new-page.html
+++ b/new-page.html
@@ -11,7 +11,7 @@
 	<!--css-->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
-    <link rel="stylesheet" href="../notice/notice.css">
+    <link rel="stylesheet" href="../script/notice/notice.css">
     <!--web情報-->
     <meta name="keywords" content="水戸一, 水戸一附属, 水戸一附属中, 一学年,">
     <meta name="description" content="水戸一附属中生向けの総合ウェブサイトです。附属中向けの掲示板や質問箱を運営しています。">
@@ -58,7 +58,7 @@
         <p><a href="https://www.mito1-jh.ibk.ed.jp" target="_blank" rel="noopener noreferrer">茨城県立水戸第一高等学校附属中学校HP</a></p>
     </footer>
 
-	<script type="module" src="../notice/notice.js"></script>
+	<script type="module" src="../script/notice/notice.js"></script>
     <script src="../script/customAlert.js" type="module"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="../manifest.json">
