--- a/question/details/index.html
+++ b/question/details/index.html
@@ -11,7 +11,7 @@
     <!--css-->
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
-    <link rel="stylesheet" href="../../notice/notice.css">
+    <link rel="stylesheet" href="../../script/notice/notice.css">
     <style>
         .format-buttons {
             margin-bottom: 10px;
@@ -378,7 +378,7 @@
             }
         });
     </script>
-    <script type="module" src="../../notice/notice.js" defer></script>
+    <script type="module" src="../../script/notice/notice.js" defer></script>
     <script src="../../script/customAlert.js" type="module"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="../../manifest.json">
