--- a/request_music/detail/index.html
+++ b/request_music/detail/index.html
@@ -11,7 +11,7 @@
     <!--css-->
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
-    <link rel="stylesheet" href="../../notice/notice.css">
+    <link rel="stylesheet" href="../../script/notice/notice.css">
     <!--web情報-->
     <meta name="keywords" content="水戸一, 水戸一附属, 水戸一附属中, 一学年,">
     <meta name="description" content="水戸一附属中四期生向けの総合ウェブサイトです。附属中向けのテストの情報などを配信しています。">
@@ -64,7 +64,7 @@
         </p>
     </footer>
 
-    <script type="module" src="../../notice/notice.js"></script>
+    <script type="module" src="../../script/notice/notice.js"></script>
     <script src="../../script/customAlert.js" type="module"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="../../manifest.json">
